auth/src/main/java/com/example/bookstore/auth/errors/StartupException.java
package com.example.bookstore.auth.errors;

public class StartupException extends Exception {

	public StartupException(String message) {
		super(message);
	}
}
